feat: add client Local storege management

--- a/graphqlapp/src/style/index.scss
+++ b/graphqlapp/src/style/index.scss
@@ -22,6 +22,8 @@ body {
   }
   .logo {
     height: 48px;
+    overflow: hidden;
+    
     color: white;
     line-height: 48px;
     text-align: center;
