--- a/graphqlapp/src/style/index.less
+++ b/graphqlapp/src/style/index.less
@@ -30,7 +30,11 @@ body {
         background: rgba(255, 255, 255, .2);
       }
       .layout {
-        height: 100%;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
       }
     }
   }
